OC3 = OpenCart 3
PS  = PrestaShop
VM3 = VirtueMart3 (Joomla)
WC  = WooCommerce (WordPress) (alle ondersteunde versies)
WC2 = WooCommerce 2 (WordPress)
WC3 = WooCommerce 3 (WordPress)

5.4.3 (2018-05-??)
------------------
- WC: Rendering of invoice and packing slip contained errors possibly leading to
  2 pdf icons before the invoice.

5.4.2 (2018-05-15)
------------------
- WC: typo in css class is-dismissible on messages.
- WC: Op een bestellingpagina in de backend wordt nu een statusoverzicht getoond
  van de Acumulusfactuur. In een volgende versie zullen acties als bv. 'Opnieuw
  verzenden' en 'Op betaald zetten' toegevoegd worden. Laat ons weten wat u hier
  van vindt. Suggesties en opmerkingen zijn van harte welkom!
- ALL: moved Creator::getInvoiceTotals() to Source::getTotals().
- ALL: moved Creator::completeInvoiceTotals() to Source::completeTotals().
- ALL: renamed Source::getTotals() to Source::getAvailableTotals().
- ALL: renamed Source::getPaymentState() to Source::getPaymentStatus().
- ALL: Legend or summary are not required: Notice:  Undefined index: legend ...

5.4.1 (2018-05-13)
------------------
Important note:
- ALL: Version 5.4.0 has been released to solve some fatal errors for Magento.
  This has been done while not all the documentation had been finished yet, so
  more backwards incompatible changes (for developers) will be found in this
  5.4.1 version.

Changes:
- ALL: To "clean up" the appearance of the forms, especially the advanced config
  form, use of the html5 details tag has been introduced. A number of fieldsets
  are made collapsible/expandable and will be closed by default. PrestaShop does
  not support this tag, nor js collapsable fieldsets.
- ALL (MOST): Errors and warnings weren't shown when generated during saving the
  config.
- ALL: Not all curl libraries define the CURL_SSLVERSION_TLSv1_2 constant, even
  if they support that TLS version.
- HS: Trying to get property of non-object in Joomla\HikaShop\Invoice\Source.php