@@ -21,6 +21,8 @@ WC3 = WooCommerce 3 (WordPress)
 ------------------
 - WC: Rendering of invoice and packing slip contained errors possibly leading to
   2 pdf icons before the invoice.
+- Warning: strpos() expects parameter 1 to be string, array given in Config.php
+  on line 1129/1155.
 
 5.4.2 (2018-05-15)
 ------------------
